<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/plan_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/plan_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/agent_url"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/agent_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/impee_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/impee_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/claimed_at"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/claimed_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="configure"
            android:text="@string/configure" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:text="@string/reset" />
    </LinearLayout>

</LinearLayout>